table reservation initial commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="log_in">Log in</string>
     <string name="continue_as_guest">Continue as Guest</string>
     <string name="welcome_to_a_very_fancy_restaurant">Welcome to a very fancy restaurant!!</string>
+    <string name="please_fill_out_the_following_information">Please fill out the following information</string>
+    <string name="name_of_reservation">Name of Reservation</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="date_of_reservation">Date of Reservation</string>
+    <string name="number_guests">Number of Guests</string>
+    <string name="submit">Submit</string>
+
 </resources>
